--- a/404.html
+++ b/404.html
@@ -3,6 +3,22 @@
 
 <head>
     <meta http-equiv="refresh" content="0; url=./index.html" />
+    <style>
+        :root {
+            --background: #020617;
+            --foreground: #a5b4fc;
+        }
+
+        html,
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            background: var(--background);
+            color: var(--foreground);
+        }
+    </style>
 </head>
 
 <body>
