Added cards minigame

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 <head>
   <meta charset='UTF-8' />
   <link rel='manifest' href='site.webmanifest' />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Eagle+Lake&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Quintessential&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+
+
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no' />
   <title>Mystic Curly</title>
 </head>
 
 <body class='roboto-400'>
   <div id='root'></div>
-  <script type='module' src='/src/pages/index.tsx'></script>
+  <script type='module' src='src/pages/index.tsx'></script>
 </body>
 
 </html>
